# faultrace-RAG

./: .gitignore  DRAFT_PAPER.md  Makefile  README.md  REPORT.md  alembic.ini  openapi.json  pyproject.toml  requirements.lock.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 144051d65994_add_track_t_and_governance.py
apps/api/faulttrace_api/: database.py  main.py
apps/api/faulttrace_api.egg-info/: SOURCES.txt
apps/api/faulttrace_api/routes/: annotations.py  datasets.py  experiments.py  governance.py  runs.py
apps/api/tests/: test_annotations.py  test_duckdb_pandas_parity.py  test_edgar_adapter.py  test_governance.py  test_reporting_engine.py  test_security.py
apps/web/: next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
apps/web/.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
apps/web/.next/cache/: .rscinfo  .tsbuildinfo
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/lib/: api.ts
configs/experiments/: demo.json
data/: faulttrace.db
docs/: BUILD_STATE.md  DEMO_SCRIPT.md  SECURITY.md  THREAT_MODEL.md  UI_GUIDE.md
reports/: final-audit.md  prompt-7-completion.md  prompt-8-completion.md  prompt-9-completion.md
reports/ip/: TECHNICAL_DISCLOSURE.md
reports/ip/traces/: sample_edgar_trace.json
scripts/: compute_bootstrap_ci.R  generate_plots.R  run_track_t.py  sweep_attribution.py  sweep_springer_oracle.py
(+85 files in other folders)
