[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "faulttrace-rag"
version = "0.1.0"
description = "Counterfactual Fault Localization for Corpus-Level LLM Analytics Pipelines"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

[tool.setuptools.packages.find]
where = ["packages", "apps"]
include = ["faulttrace_*"]

[project.scripts]
faulttrace = "faulttrace_core.cli:main"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["packages", "apps"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM"]
ignore = ["E501", "B008", "N805"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_return_any = false
warn_unused_configs = true
exclude = ["migrations", "alembic"]

[tool.pytest.ini_options]
testpaths = ["apps/api/tests", "packages"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["packages", "apps/api/faulttrace_api"]
omit = ["*/tests/*", "*/migrations/*"]
